Added Minor Changes

--- a/app/src/main/res/layout/activity_sensor_test.xml
+++ b/app/src/main/res/layout/activity_sensor_test.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
+    android:layout_height="match_parent">
+
 
     <TextView
         android:id="@+id/textView"
-        android:layout_marginTop="15dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
         android:text="Shake to get a toast and to switch color" />
 
     <LinearLayout
         android:id="@+id/ll_main"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:orientation="vertical">
 
@@ -43,5 +44,12 @@
             android:textSize="25sp" />
 
     </LinearLayout>
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph"
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:layout_below="@+id/ll_main"
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
