--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="dark_gray_color">#3f3f3f</color>
+
+
+
+    <color name="splashcolor">#2E2E2E</color>
+    <color name="white">#FFFFFF</color>
+    <color name="txt_hint_color">#c0c0c0</color>
+    <color name="bg_color">#e9e7e7</color>
+
+
 </resources>
